--- a/AgniKai.css
+++ b/AgniKai.css
@@ -82,7 +82,7 @@ h1 {
 
 .character:hover {
     border: 1px solid black;
-    transform: scale(1.3);
+    transform: scale(1.15);
     color: #fff;
 }
 
@@ -147,6 +147,9 @@ h1 {
     background-size: cover;
     left: 0;
     top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .character02 {
@@ -157,4 +160,57 @@ h1 {
     background-size: cover;
     right: 0;
     top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+.player-click{
+    height: 15vh;
+    width: 15vh;
+    line-height: 15vh;
+    text-align: center;
+    background-image: url(assets/fireBall.jpeg);
+    background-position: center;
+    background-size: cover;
+    border-radius: 180px;
+    color: #fff;
+}
+
+.player-click:active{
+    transform: scale(0.8);
+}
+
+.cpu-click{
+    height: 15vh;
+    width: 15vh;
+    line-height: 15vh;
+    text-align: center;
+    background-image: url(assets/fireBall.jpeg);
+    background-position: center;
+    background-size: cover;
+    border-radius: 180px;
+    color: #fff;
+    animation: cpuClick 0.15s infinite;
+    
+}
+
+.atack{
+    color: #fff;
+    height: 15vh;
+    width: 15vh;
+    font-size: 1.5rem;
+    text-align: center;
+    
+}
+
+@keyframes cpuClick{
+    0%{
+        transform: scale(0.8);
+    }
+    50%{
+        transform: scale(1); 
+    }
 }
