win victory agniKai

--- a/style.css
+++ b/style.css
@@ -305,7 +305,7 @@ nav a:hover {
 .lax {
     height: 45vh;
     width: 100vw;
-    background-image: url(assets/irohAndZuko.jpg);
+    background-image: url(assets/fireLax.jpeg);
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
