--- a/style.css
+++ b/style.css
@@ -421,6 +421,7 @@ nav a:hover {
     padding-left: 1rem;
     display: flex;
 }
+
 .aang-air {
     height: 100vh;
     width: 50vw;
@@ -442,7 +443,7 @@ nav a:hover {
     text-align: center;
 }
 
-.txt-air p{
+.txt-air p {
     font-size: 1.7rem;
 }
 
@@ -585,8 +586,8 @@ nav a:hover {
     height: 100vh;
     width: 50vw;
     background-image: url(assets/tophSolo.png);
-    background-size: cover;
-    background-position: bottom;
+    background-size: contain;
+    background-position: center;
     background-repeat: no-repeat;
 
 }
@@ -604,7 +605,7 @@ nav a:hover {
     text-align: center;
 }
 
-.txt-earth p{
+.txt-earth p {
     font-size: 1.7rem;
 }
 
