--- a/air-aang.css
+++ b/air-aang.css
@@ -37,10 +37,23 @@ body {
     width: 50vw;
 }
 
+.txt-cycle{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    font-size: 2rem;
+    color: #fff;
+}
+
+
+
 .cycle-img {
-    background-image: url(assets/cicloAvatar.jpg);
+    background-image: url(assets/cicloBlack.jpg);
+   
     background-position: center;
-    background-size: cover;
+    background-size: contain;
+
 }
 
 
@@ -105,47 +118,91 @@ body {
 
 }
 
-.flip-card {
-    height: 65vh;
+.element{
+    background-color: antiquewhite;
     width: 20vw;
-    background-color: transparent;
-    perspective: 1000px;
-    /* Adiciona perspectiva para o efeito 3D */
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    border-top-left-radius: 3rem;
+    border-top-right-radius: 3rem;
+}
+
+.earth-card{
+    background-color: rgb(0, 100, 0);
+    border: 5px solid rgb(0, 100, 0);
+}
+.fire-card{
+    background-color: rgb(100, 0, 0);
+    border: 5px solid rgb(100, 0, 0);
+}
+
+.air-card{
+    background-color: rgb(150, 150, 150);
+    border: 5px solid rgb(150, 150, 150);
+
+}
+.water-card{
+    background-color: rgb(0, 0, 100);
+    border: 5px solid  rgb(0, 0, 100);
 
 }
 
-.flip-card-front,
-.flip-card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-    overflow-y: hidden;
+.container-img{
+    height:  30vh;
+    width: 20vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
 }
 
-.flip-card-back {
-    transform: rotateY(180deg);
-    /* Inicia a face traseira virada para trás */
-
+.container-txt{
+    height: 40vh;
+    width: 20vw;
+    display: flex;
+   flex-direction: column;
+   margin-top: 2.5rem;
+   justify-content: top;
+   align-items: center;
+    text-align: center;
+    color: #fff;
 }
 
-.flip-card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    transition: transform 1s;
-    transform-style: preserve-3d;
-
+.img-card{
+    height: 20vh;
+    width: 20vh;
+    border-radius: 90px;
+    background-color: #fff;
+    background-position: center;
+    background-size: cover;
+    border: 2px solid black;
 }
 
-.flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
-    /* Rotaciona o cartão ao passar o mouse */
-
+.toupeira-img{
+    background-image: url(assets/cardToupeira.jpg);
+    
 }
 
-.flip-card-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.bisao-img{
+    background-image: url(assets/AppaGiant.png);
 }
+
+.moon{
+    background-image: url(assets/MoonSea.jpg);
+}
+
+.dragon{
+    background-image: url(assets/DragonFire.webp);
+}
+
+.title-txt{
+    font-size: 2rem;
+    margin-bottom: 20px;
+}
+
+.txt-card{
+    font-size: 1.5rem;
+}
+
+
