--- a/air-aang.css
+++ b/air-aang.css
@@ -9,13 +9,15 @@ body {
     background-color: rgb(251, 254, 205);
 }
 
+
+
 .High {
     height: 100vh;
     width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url(assets/spirit-world-avatar.jpg);
+    background-image: url(assets/avataresUnidos.jpg);
     background-size: cover;
 
 }
@@ -121,7 +123,7 @@ body {
 .element{
     background-color: antiquewhite;
     width: 20vw;
-    height: 70vh;
+    height: 65vh;
     display: flex;
     flex-direction: column;
     border-top-left-radius: 3rem;
@@ -158,7 +160,7 @@ body {
 }
 
 .container-txt{
-    height: 40vh;
+    height: 35vh;
     width: 20vw;
     display: flex;
    flex-direction: column;
