--- a/style.css
+++ b/style.css
@@ -16,25 +16,23 @@
 .home {
     height: 100vh;
     width: 100vw;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 1));
+   
 }
 
 .info-home {
-    color: antiquewhite;
+   
     position: absolute;
-    top: 50%;
+    height: 20vh;
+    width: 25vw;
+    top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
+    background-image: url(assets/logoAvatar.png);
+    background-position: center;
+    background-size: cover;
 
 }
 
-
-.title-home {
-    text-align: center;
-    font-size: 5rem;
-    animation: changeColor 10s forwards infinite;
-    animation-direction: alternate;
-}
 
 @keyframes changeColor {
     0% {
@@ -344,7 +342,7 @@ nav a:hover {
 
     height: 100vh;
     width: 100vw;
-    padding-left: 1rem;
+   
     display: flex;
 }
 
@@ -358,6 +356,10 @@ nav a:hover {
     justify-content: center;
     align-items: center;
     text-align: center;
+    border: 0.3rem solid rgb(194, 3, 3);
+    background-color: rgba(0, 0, 0, 0.5);
+    border-bottom: 0;
+    border-top: 0;
 }
 
 
@@ -389,19 +391,19 @@ nav a:hover {
     border-radius: 0.7rem;
     color: #fff;
     background-image: linear-gradient(rgb(215, 0, 0), rgb(80, 0, 0));
-    border: 2px solid rgb(255, 255, 255);
+    border: 2px solid rgb(0, 0, 0);
     border-bottom: 0.3rem solid rgb(255, 255, 255);
     box-shadow: 0 0.7rem 1rem 0.2rem var(--red);
     text-decoration: none;
 }
 
-.button-agnikai:focus {
+.go:focus {
     transform: translate(0, -3px);
     cursor: pointer;
     transition: 0.2s;
 }
 
-.button-agnikai:active {
+.go:active {
     transform: translate(0, 0);
     border-bottom: 2px solid rgb(148, 148, 148);
 }
@@ -418,7 +420,7 @@ nav a:hover {
     background-size: cover;
     height: 100vh;
     width: 100vw;
-    padding-left: 1rem;
+    
     display: flex;
 }
 
@@ -441,10 +443,27 @@ nav a:hover {
     justify-content: center;
     align-items: center;
     text-align: center;
+    border: 0.3rem solid rgb(255, 255, 255);
+    background-color: rgba(0, 0, 0, 0.5);
+    border-bottom: 0;
+    border-top: 0;
+    color: #fff;
 }
 
 .txt-air p {
     font-size: 1.7rem;
+}
+
+.button-air {
+    font-size: 1rem;
+    padding: 0.6rem 1.8rem;
+    border-radius: 0.7rem;
+    color: #fff;
+    background-image: linear-gradient(rgb(255, 255, 255), rgb(68, 66, 66));
+    border: 2px solid rgb(0, 0, 0);
+    border-bottom: 0.3rem solid rgb(2, 2, 2);
+    box-shadow: 0 0.7rem 1rem 0.2rem #fff;
+    text-decoration: none;
 }
 
 
@@ -467,6 +486,10 @@ nav a:hover {
     justify-content: center;
     align-items: center;
     text-align: center;
+    border: 0.3rem solid rgb(40, 147, 235);
+    background-color: rgba(0, 0, 0, 0.5);
+    border-bottom: 0;
+    border-top: 0;
 }
 
 .txt-water h1 {
@@ -513,8 +536,8 @@ nav a:hover {
 
 .liquid {
     background-color: #2893eb;
-    width: 200px;
-    height: 70px;
+    width: 14rem;
+    height: 5rem;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -603,12 +626,28 @@ nav a:hover {
     justify-content: center;
     align-items: center;
     text-align: center;
+    border: 0.3rem solid rgb(8, 155, 0);
+    background-color: rgba(0, 0, 0, 0.5);
+    border-bottom: 0;
+    border-top: 0;
+    color: #fff;
 }
 
 .txt-earth p {
     font-size: 1.7rem;
 }
 
+.button-earth {
+    font-size: 1rem;
+    padding: 0.6rem 1.8rem;
+    border-radius: 0.7rem;
+    color: #fff;
+    background-image: linear-gradient(rgb(0, 90, 0), rgb(0, 90, 0));
+    border: 2px solid rgb(0, 255, 0);
+    border-bottom: 0.3rem solid rgb(0, 255, 0);
+    box-shadow: 0 0.7rem 1rem 0.2rem #008000;
+    text-decoration: none;
+}
 
 
 .aboutMe {
@@ -627,4 +666,45 @@ nav a:hover {
 
 .red {
     color: var(--red);
+}
+
+.login-card{
+    height: 25vh;
+    width: 35vw;
+    background-color: #000;
+    border: 4px solid white;
+    border-radius: 3rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.txt-card-login{
+    height: 15vh;
+    width: 100%;
+    color: #fff;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    
+    flex-direction: column;
+}
+
+.txt-card-login p{
+    font-size: 1.5rem;
+    text-align: left;
+    margin-left: 3rem;
+}
+
+
+.txt-card-login span{
+    width: 20vw;
+    font-size: 1.3rem;
+    
+}
+
+.button-card-login{
+    height: 10vh;
+    width: 100%;
 }
