subindo alterações feitas em aula agni kai e login

--- a/AgniKai.css
+++ b/AgniKai.css
@@ -256,8 +256,14 @@ h1 {
     transform: translate(-50%, -50%);
     position: absolute;
     background-color: #fff;
-    color: aqua;
+    color: rgb(110, 0, 0);
+    border: 2px solid rgb(110, 0, 0);
     z-index: 1
+}
+
+.start-game:hover{
+    background-color: rgb(110, 0, 0);
+    color: #fff;
 }
 
 .timer {
