--- a/cadastrologin.css
+++ b/cadastrologin.css
@@ -115,7 +115,6 @@
 
 .overlay {
     position: absolute;
-    
     transform: translate(100%);
     background-repeat: no-repeat;
     background-size: cover;
@@ -123,6 +122,7 @@
     height: 100%;
     background-color: blue;
     transition: 1s ease-in-out;
+    background-image: url(assets/kataraArt.jpg);
 }
 
 input[type="radio"] {
@@ -146,4 +146,15 @@ input[type="radio"]:checked {
 
 .red {
     color: var(--red)
+}
+
+.signIn:hover{
+   
+    border-color:  rgb(5, 5, 190, 0.1);
+    background-color: rgb(5, 5, 190);
+}
+
+.signUp:hover{
+    background-color:  var(--red);
+    border-color: rgb(190, 5, 5, 0.1);
 }
